add disabled state, and dist folder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="src/themes/material.css" rel="stylesheet" />
   </head>
   <body>
-    <base-select searchable placeholder="Select an option">
+    <base-select multiple searchable placeholder="Select an option">
       <base-option selected value="value1" label="Label 1"></base-option>
       <base-option value="value2" disabled label="Label 2"></base-option>
       <base-option value="value3" label="Label 3"></base-option>
