tweaking styles and behaviour

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html theme="minimal" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,11 +8,20 @@
     <link href="src/themes/material.css" rel="stylesheet" />
   </head>
   <body>
-    <base-select multiple searchable placeholder="Select an option">
-      <base-option selected value="value1" label="Label 1"></base-option>
-      <base-option value="value2" disabled label="Label 2"></base-option>
-      <base-option value="value3" label="Label 3"></base-option>
+    <base-select id="baseSelect" searchable placeholder="Select an option">
+      <base-option value="value1"></base-option>
+      <base-option value="value2"></base-option>
+      <base-option value="value3"></base-option>
+      <base-option value="value4"></base-option>
+      <base-option value="value5"></base-option>
+      <base-option value="value6"></base-option>
+      <base-option value="value7"></base-option>
+      <base-option value="value8"></base-option>
+      <base-option value="value9"></base-option>
+      <base-option value="value10"></base-option>
+      <base-option value="value11"></base-option>
+      <base-option value="value12"></base-option>
     </base-select>
-    <script src="build/main.js"></script>
+    <script src="dist/main.js"></script>
   </body>
 </html>
