--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
     <link href="src/themes/material.css" rel="stylesheet" />
   </head>
-  <body>
-    <base-select id="baseSelect" searchable placeholder="Select an option">
+  <body
+    style="max-width: 600px; display: block; margin: 0 auto; margin-top: 100px;"
+  >
+    <base-select id="baseSelect" multiple searchable>
       <base-option value="value1"></base-option>
       <base-option value="value2"></base-option>
       <base-option value="value3"></base-option>
