--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       max-width: 600px;
       display: block;
       margin: 0 auto;
+      padding: 0 12px;
       margin-top: 100px;
     }
   </style>
