--- a/index.html
+++ b/index.html
@@ -17,26 +17,25 @@
       margin-top: 100px;
     }
   </style>
-  <body theme="minimal">
+  <body>
     <div>
       <label>
         <input
           type="radio"
-          onchange="handleThemeChange(this);"
-          checked
+          onchange="setAttr(this, 'body');"
           name="theme"
-          value="minimal"
+          value=""
         />
-        Minimal
+        None
       </label>
       <label>
         <input
           type="radio"
-          onchange="handleThemeChange(this);"
+          onchange="setAttr(this, 'body');"
           name="theme"
-          value="none"
+          value="minimal"
         />
-        None
+        Minimal
       </label>
     </div>
 
@@ -44,16 +43,30 @@
       <label>
         <input
           type="checkbox"
-          onchange="toggleMultiple(this);"
-          name="type"
+          onchange="toggleAttr(this, '#baseSelect');"
           value="multiple"
         />
         Multiple
       </label>
+      <label>
+        <input
+          type="checkbox"
+          onchange="toggleAttr(this, '#baseSelect');"
+          value="menu-open-on-select"
+        />
+        Keep menu open
+      </label>
+      <label>
+        <input
+          type="checkbox"
+          onchange="toggleAttr(this, '#baseSelect');"
+          value="searchable"
+        />
+        Searchable
+      </label>
     </div>
 
-    <base-select id="baseSelect" menu-open-on-select searchable>
-      <h1>Select all</h1>
+    <base-select id="baseSelect">
       <base-option value="Banana"></base-option>
       <base-option value="Apple"></base-option>
       <base-option value="Pear"></base-option>
@@ -69,17 +82,15 @@
     </base-select>
     <script src="dist/main.js"></script>
     <script>
-      function handleThemeChange(e) {
-        document.body.setAttribute("theme", e.value);
+      function setAttr(input, selector) {
+        const el = document.querySelector(selector);
+        el.setAttribute(input.name, input.value);
       }
 
-      function toggleMultiple(e) {
-        console.log(baseSelect.propsData);
-        if (e.checked) {
-          baseSelect.setAttribute("multiple", "");
-        } else {
-          baseSelect.removeAttribute("multiple");
-        }
+      function toggleAttr(input, selector) {
+        const el = document.querySelector(selector);
+        if (input.checked) el.setAttribute(input.value, "");
+        else el.removeAttribute(input.value);
       }
     </script>
   </body>
